--- a/User/index2.html
+++ b/User/index2.html
@@ -43,13 +43,13 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="#about" class="nav-link">
-                    <span class="d-inline-block mr-3">About</span>
+                    <span class="d-inline-block mr-3">Hasil Penjurusan</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Work</span>
+                    <span class="d-inline-block mr-3">Login</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
